# signet-pqc-control-plane

./: .gitignore  BRANCH_PROTECTION.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mypy.ini  osv-scanner.toml  postman_collection.json  pyproject.toml  ruff.toml  run_api.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  scorecard.yml
docker/: compose.restricted.yml
docker/nginx/: nginx.default.conf  nginx.restricted.conf
docs/.github/: SETUP.md
scripts/: generate_compliance_pack.py  receipt_audit.py
src/cbom_agent/: __init__.py  builder.py  cli.py  signer.py
src/cbom_agent/collectors/: linux_openssl.py
src/cbom_agent/schema/: cbom_schema.json
src/control_plane/: __init__.py  api.py  receipts.py
src/spcp/: settings.py  spcp_cli.py
src/spcp/api/: main.py  models.py
src/spcp/cbom/: collector.py
src/spcp/client/: __init__.py  pch.py
src/spcp/pch/: auth.py  verify.py
src/spcp/policy/: circuit_breaker.py  store.py  tuple_policy.py
src/spcp/proxy/: cbom.py  runner.py
src/spcp/receipts/: jcs.py  merkle.py  pack.py  sign.py
terminators/nginx-oqs/: Dockerfile  handshake_tailer.py  nginx.conf  openssl.cnf  tls_deny_tailer.py
tests/: test_api.py  test_cbom.py  test_cbom_agent.py  test_cli.py  test_handshake_extractor.py  test_integration_cbom.py  test_jcs.py  test_latest_receipt.py  test_merkle.py  test_pch.py  test_pch_enforcer.py  test_receipts.py  test_sign_and_chain.py  test_soft_policy.py
tests/integration/: test_pch_compose.py  test_pqc_control_plane.py
(+2 files in other folders)
